--- a/app/src/main/res/layout/custom_theloai.xml
+++ b/app/src/main/res/layout/custom_theloai.xml
@@ -3,23 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="3">
-    <TextView
+    android:weightSum="2"
+    >
+    <android.support.v7.widget.CardView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/parent_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="26sp"
-        android:textColor="#000000"
-        android:layout_weight="2"
-        android:id="@+id/txtHinh"
-        android:gravity="center"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="26sp"
-        android:textColor="#000000"
+        android:layout_height="120dp"
+        android:layout_margin="6dp"
+        app:cardCornerRadius="12dp"
         android:layout_weight="1"
-        android:id="@+id/txtTenTheLoai"
-        android:gravity="left"
-        />
+        android:background="#000000">
+    <ImageView
+        android:id="@+id/txtTenHinh"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:scaleType="centerCrop"
+        android:textColor="#000000"
+       />
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
