--- a/app/src/main/res/layout/fragment_theloai.xml
+++ b/app/src/main/res/layout/fragment_theloai.xml
@@ -2,12 +2,24 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C18C00"
+    android:background="@drawable/backgroundfrag"
     android:orientation="vertical">
-    <ListView
+    <SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFF"
-        android:id="@+id/ListViewTheLoai"></ListView>
-
+        android:layout_margin="10dp"
+        android:background="@drawable/customsearch"
+        android:textAlignment="textStart"
+        android:id="@+id/search_bar"
+        android:queryHint="Search here"
+        ></SearchView>
+    <requestFocus />
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ListViewTheLoai"
+        android:background="@drawable/backgroundfrag"
+        android:gravity="center"
+        android:numColumns="auto_fit"
+        ></GridView>
 </LinearLayout>
