--- a/app/src/main/res/layout/fragment_timkiem.xml
+++ b/app/src/main/res/layout/fragment_timkiem.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AF4A92">
-    <android.support.v7.widget.CardView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/parent_layout"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        app:cardCornerRadius="5dp"
-        tools:ignore="MissingConstraints">
-
-        <EditText
+    android:background="@drawable/backgroundfrag"
+    android:orientation="vertical">
+        <SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="25dp" />
-
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+            android:layout_margin="20dp"
+            android:background="@drawable/customsearch"
+            android:textAlignment="textStart"
+            android:id="@+id/search_bar"
+            android:queryHint="Search here"
+            android:onClick="Search"
+            ></SearchView>
+        <requestFocus />
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@+id/search"
+            android:background="#FFFFFF"
+            android:numColumns="auto_fit"
+            />
+</LinearLayout>
