--- a/app/src/main/res/layout/fragment_trangchu.xml
+++ b/app/src/main/res/layout/fragment_trangchu.xml
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundfrag"
+    android:background="#FFFFFF"
     android:orientation="vertical">
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@drawable/customsearch"
-        android:textAlignment="textStart"
-        android:id="@+id/search_bar"
-        android:queryHint="Search here"
-        ></SearchView>
-    <requestFocus />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ListViewBaiHat"
-        android:gravity="center"
-        android:numColumns="auto_fit"
-        ></ListView>
+        android:id="@+id/lv_baihat"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"></ListView>
 </LinearLayout>
