--- a/app/src/main/res/layout/dialog_addplaylist.xml
+++ b/app/src/main/res/layout/dialog_addplaylist.xml
@@ -9,13 +9,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="50dp"
         android:text="Chọn PlayList"
         android:textSize="20dp"
         android:gravity="center"
-        android:textColor="#EE0000"/>
+        android:textColor="#EE0000"
+        android:id="@+id/textView"/>
 
     <Spinner
         android:id="@+id/spnCategory"
@@ -25,30 +26,29 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center"
-        android:layout_marginStart="103dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="101dp"
-        android:layout_marginEnd="97dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_below="@+id/textView"/>
 
     <Button
+        android:id="@+id/btn_xacnhan"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="194dp"
-        android:layout_marginEnd="231dp"
-        android:text="Xác Nhận" />
+        android:layout_below="@+id/spnCategory"
+        android:text="Xác Nhận"
+        android:layout_marginLeft="20dp"/>
 
     <Button
+        android:id="@+id/btn_huy"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="197dp"
-        android:layout_marginEnd="69dp"
+        android:layout_below="@+id/spnCategory"
+        android:layout_toLeftOf="@+id/btn_xacnhan"
+        android:layout_marginLeft="10dp"
         android:text="Hủy Bỏ" />
 </RelativeLayout>
