--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-
-    <ListView
-        android:id="@+id/lv_Playlist"
+    android:background="@drawable/backgroundfrag"
+    android:orientation="vertical">
+    <SearchView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/bt_addplaylist"
-        android:layout_marginTop="30dp" />
-
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/customsearch"
+        android:textAlignment="textStart"
+        android:id="@+id/search_bar"
+        android:queryHint="Search here"
+        ></SearchView>
+    <requestFocus />
     <Button
-        android:id="@+id/bt_addplaylist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="100dp"
-        android:background="#8A0868"
-        android:text="TẠO PLAYLIST"
-        android:onClick="dialogthem"/>
-</RelativeLayout>
+        android:id="@+id/bt_addplaylist"
+        android:background="@drawable/btnplaylist"
+        android:layout_gravity="center"
+        android:textColor="#333333"
+        android:textSize="18sp"
+        android:layout_margin="10dp"
+        android:drawableLeft="@drawable/add"
+        android:text="  TẠO PLAYLIST     "/>
+
+    <GridView
+        android:id="@+id/lv_Playlist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:numColumns="auto_fit"></GridView>
+
+</LinearLayout>
