--- a/app/src/main/res/layout/row_casi.xml
+++ b/app/src/main/res/layout/row_casi.xml
@@ -1,47 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:weightSum="2"
+    >
+    <android.support.v7.widget.CardView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/parent_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:orientation="horizontal">
+        android:layout_height="140dp"
+        android:layout_margin="6dp"
+        app:cardCornerRadius="12dp"
+        android:layout_weight="1"
+        android:background="#000000">
 
         <ImageView
-            android:id="@+id/iv_avatarcasi"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="#18ade4"
+            android:id="@+id/tv_avatarcasi"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#ffffff"
-            android:textSize="28sp"
-            android:textStyle="bold" />
+            android:scaleType="centerCrop"
+            android:textColor="#000000" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
-            android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="18dp"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginTop="118dp"
+            android:id="@+id/tv_sobaihat"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginTop="100dp"
+            android:id="@+id/tv_tencasi"/>
+    </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/tv_tencasi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Amee"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tv_sobaihat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="10 bai hat"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-    </LinearLayout>
 </LinearLayout>
