--- a/app/src/main/res/layout/diaglog_createplaylist.xml
+++ b/app/src/main/res/layout/diaglog_createplaylist.xml
@@ -1,47 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:orientation="vertical"
+    android:weightSum="3">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:text="TẠO PLAYLIST"
-        android:gravity="center"
-        android:textSize="25dp"
-        android:textColor="#151515"/>
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Tạo PlayList"
+            android:textStyle="bold"
 
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" />
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            android:background="@drawable/icon" />
+
+    </LinearLayout>
     <EditText
         android:hint="Nhập tên playlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:id="@+id/et_nhapten"
-        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="20sp"
+        android:layout_weight="1"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/bt_xacnhan"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/custom_btndialog"
+            android:text="Xác Nhận" />
 
-    <Button
-        android:id="@+id/bt_huy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_nhapten"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        android:text="Hủy Bỏ" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_nhapten"
-        android:id="@+id/bt_xacnhan"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_toRightOf="@+id/bt_huy"
-        android:text="Xác Nhận"/>
-</RelativeLayout>
+        <Button
+            android:id="@+id/bt_huy"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_btndialog"
+            android:text="Hủy Bỏ"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+</LinearLayout>
