--- a/app/src/main/res/layout/dialog_addplaylist.xml
+++ b/app/src/main/res/layout/dialog_addplaylist.xml
@@ -1,54 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="100dp"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:orientation="vertical"
+    android:weightSum="3">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="50dp"
-        android:text="Chọn PlayList"
-        android:textSize="20dp"
-        android:gravity="center"
-        android:textColor="#EE0000"
-        android:id="@+id/textView"/>
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Chọn PlayList"
+            android:textStyle="bold"
 
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" />
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:layout_margin="5dp"
+            android:layout_gravity="center"
+            android:background="@drawable/icon" />
+
+    </LinearLayout>
     <Spinner
         android:id="@+id/spnCategory"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_gravity="center"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="101dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:gravity="center"
-        android:layout_below="@+id/textView"/>
-
-    <Button
-        android:id="@+id/btn_xacnhan"
-        android:layout_width="100dp"
+        android:layout_weight="1"
+        android:gravity="center"/>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/spnCategory"
-        android:text="Xác Nhận"
-        android:layout_marginLeft="20dp"/>
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/btn_xacnhan"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/custom_btndialog"
+            android:text="Xác Nhận" />
 
-    <Button
-        android:id="@+id/btn_huy"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/spnCategory"
-        android:layout_toLeftOf="@+id/btn_xacnhan"
-        android:layout_marginLeft="10dp"
-        android:text="Hủy Bỏ" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/btn_huy"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_btndialog"
+            android:text="Hủy Bỏ"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+</LinearLayout>
