--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="0dp"
         android:text="Tên Bài Hát"
+        android:textColor="@android:color/background_light"
         android:textSize="24sp" />
 
     <TextView
@@ -23,5 +24,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="36dp"
         android:text="Tên ca sĩ"
+        android:textColor="@android:color/background_light"
         android:textSize="18sp" />
 </RelativeLayout>
