--- a/app/src/main/res/layout/activity_fragment__music__online.xml
+++ b/app/src/main/res/layout/activity_fragment__music__online.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,4 +7,10 @@
     android:background="@drawable/backgroundfrag"
     tools:context=".Fragment.Fragment_Music_Offline">
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lv_baihatonline"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"></ListView>
+</LinearLayout>
